# ExpView

./: .README.md.swp  .gitignore  README.md  cols.json  exp.py  github_readme.md  mylogs.py  pyproject.toml  sample.csv  show.py
.github/workflows/: docs.yaml
docs/: index.md
env1/: pyvenv.cfg
env2/: pyvenv.cfg
examples/: cols.json  conf.json  example.py  my_experiment.py  params.json  results.csv  results.csv.conf.json
expframe/: exp.py  show.py
expview/: __init__.py  base.json  cols.json  exp.py  mylogs.py  show.py
expview/utils/: utils.py~
utils/: .utils.py.un~  utils.py
