[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expview"
version = "0.1.0"
description = "Experimental data manager and visualization tools"
readme = "README.md"
authors = [
    { name = "Ahmad Pouramini" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/puraminy/ExpView"

[tool.setuptools.packages.find]
where = ["."]
include = ["expview*"]

[project.scripts]
exprun = "expview.exp:cli"
expview = "expview.show:main"

