[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expframe"
version = "0.1.0"
description = "Experimental data manager and visualization tools"
readme = "README.md"
authors = [
    { name = "Ahmad Pouramini" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "seaborn>=0.12",
    "tabulate>=0.9",
    "tqdm>=4.65",
    "six>=1.16",
    "pyperclip>=1.8",
    "pytz>=2024.1",
    "PyPDF2>=3.0",
    "regex>=2023.12",
    "Pillow>=10.0",
    "appdirs>=1.4",
    "debugpy>=1.8",
    "windows-curses; platform_system=='Windows'"
]
[project.urls]
Homepage = "https://github.com/puraminy/ExpView"

[tool.setuptools.packages.find]
where = ["."]
include = ["expframe*"]

[project.scripts]
expframe = "expframe.show:main"

